fixed alignment in UI elements and classlogform modal

--- a/src/components/ClassLogFormModal/ClassLogFormModal.css
+++ b/src/components/ClassLogFormModal/ClassLogFormModal.css
@@ -34,6 +34,7 @@
 	display: flex;
 	flex-direction: column;
 	margin: 15px 0;
+	width: 100%;
 }
 
 .dropdown-row {
@@ -51,6 +52,7 @@
 	display: flex;
 	justify-content: space-around;
 	margin-top: 20px;
+	gap: 10px;
 }
 
 .notification {
