--- a/src/components/ui/DropdownSelect/DropdownSelect.css
+++ b/src/components/ui/DropdownSelect/DropdownSelect.css
@@ -1,16 +1,18 @@
 .form-group {
 	margin: 15px 0;
-	display: flex;
-	flex-direction: column;
+	font-family: Arial, sans-serif;
 }
 
-.form-group label {
+.dropdown-select-header {
 	display: flex;
 	align-items: center;
 	font-weight: bold;
 	margin-bottom: 5px;
+	font-size: 16px;
 }
 
-.form-group label svg {
+.header-icon {
 	margin-right: 8px;
+	font-size: 18px;
+	color: #343a40;
 }
